fix(sonar): Collectors.toList() 를 Stream.toList() 로 교체 (java:S6204)
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>